try to safely delete all the Node pointers from each child entity list instead of using qDeleteAll(), whose behavior has changed in Qt4.8.

MERGE: 4.8
FIXED-IN: 4.8.0
BUG: 289831
(cherry picked from commit 43b7d9886797bcf06019e9521455e534d07fd6b5)